# X4BuildGraph

./: .gitignore  CMakeLists.txt  main.cpp  modules_graph.dot  new_plans.xml  rebuild_proto.sh  wares_graph.dot
proto/: ware_types.proto  x4_types.proto
src/: common_util.h  x4_modules_xml.cpp  x4_modules_xml.h  x4_wares_xml.cpp  x4_wares_xml.h  xml_parser.cpp  xml_parser.h
src/x4/: assets_structures.cpp  assets_structures.h  construction_plans.cpp  construction_plans.h  construction_ratios.cpp  construction_ratios.h  enum_helper.cpp  enum_helper.h  lib_module_groups_xml.cpp  lib_module_groups_xml.h  lib_modules_xml.cpp  lib_modules_xml.h  lib_wares_xml.cpp  lib_wares_xml.h  library_wares.cpp  library_wares.h
src/xml/: xml_attr_util.cpp  xml_attr_util.h  xml_node_util.cpp  xml_node_util.h  xml_parser.cpp  xml_parser.h
util/: common_util.h  proto_util.h  xml_attr_util.h  xml_node_util.h
x4util/: lib_wares_util.h
